fix nav landscape mode overflow issue

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -82,15 +82,32 @@
   border-right: 1.5px solid #c4c4c4;
 }
 
-@media only screen and (max-width: 440px) {
-  .nav-subscribe {
+@media only screen and (max-width: 440px) and (min-height: 601px){
+  .nav-subscribe,
+  .nav-title {
     font-size: 12px;
   }
 }
 
-@media only screen and (min-width: 441px) {
-  .nav-subscribe {
+@media only screen and (min-width: 441px) and (min-height: 601px){
+  .nav-subscribe,
+  .nav-title {
     font-size: 14px;
+  }
+  .nav-search-icon{
+    height: 40px;
+    width: 40px;
+  }
+}
+
+@media only screen and (max-height: 600px){
+  .nav-subscribe,
+  .nav-title{
+    font-size: 10px;
+  }
+  .nav-search-icon{
+    height: 30px;
+    width: 30px;
   }
 }
 
